# uzbek_spellchecker

./: CMakeLists.txt  README.md
lexicon/: lexicon.txt
noun-affixes/: oneElementAffix.txt  twoElementsAffixes.txt
noun-affixes/consonants/: affixesNounEndingWithConsonant.txt  threeAffixesNounEndingWithConsonant.txt  twoAffixesNounEndingWithConsonant.txt
noun-affixes/vowels/: affixesNounEndingWithVowel.txt  oneAffixesNounEndingWithVowel.txt  threeAffixesNounEndingWithVowel.txt  twoAffixesNounEndingWithVowel.txt
sources/: LinkedList.cpp  LinkedList.h  lemmatizer.cpp  lemmatizer.h  levenshtein.cpp  levenshtein.h  loader.cpp  loader.h  main.cpp  permutations.cpp  permutations.h  soundex.cpp  soundex.h  tokenizer.cpp  tokenizer.h
sources/hashmap/: HashMap.h  HashNode.h  main.cpp
